--- a/build.gradle
+++ b/build.gradle
@@ -26,11 +26,13 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.1'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
     }
-
 }
 
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
+group = 'com.github.panweiwork'
 
 ext {
     apply from: 'cordova.gradle'
@@ -44,8 +46,8 @@ android {
     publishNonDefault true
 
     lintOptions {
-          abortOnError false
-      }
+        abortOnError false
+    }
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_6
